# DesktopApp

./: README.md  index.html  index.js  main.js  main.py  package-lock.json  package.json
CSystem/: project_structure.txt
CSystem/lib/port_scanner/include/: port_scanner.h
CSystem/lib/port_scanner/include/platform/: port_scanner_linux.h
CSystem/lib/port_scanner/src/: port_scanner.cpp
CSystem/lib/port_scanner/src/platform/: port_scanner_win.cpp
JSVersion/project-root/: README.md  package-lock.json  webpack.renderer.config.js
JSVersion/project-root/src/components/DataConfiguration/: DataConfigForm.js
JSVersion/project-root/src/components/Home/: Home.js
JSVersion/project-root/styles/: global.css
Port/: Port.cpp  Port.h  test  test.cpp
Public/: index.html
UI/: main.py
class/: Port.cpp  SeriaPort.cpp
client/: main.py
client/client_functions/: client_propagatio.py  client_setup.py  connector.py  local_info.py
device_scanner/: CMakeLists.txt
device_scanner/include/device_scanner/: device_scanner.h
functions/: __init__.py  customping.py  ping.py  port_scanner.py  scanner.py  vulnerabilit.py
include/: ListenPort.h
lib/: graph_test.py  test.py
lib/device_scanner/: main.cpp
lib/device_scanner/src/: device_scanner.cpp
lib/graph_creator/: __init__.py  graph2d.py  graph3d.py
lib/port_scanner/: __init__.py  serial_scanner.py  stup.py  uart_scanner.py  usb_scanner.py
lib/port_scanner/include/platform/: port_scanner_mac.h
lib/port_scanner/tests/: test_port_scanner.cpp
myvenv/: pyvenv.cfg
pages/: custom_data_ping.py  home.py  network_scanner.py  ping.py
port_scanner/: CMakeLists.txt
port_scanner/include/platform/: port_scanner_win.h
port_scanner/src/platform/: port_scanner_linux.cpp  port_scanner_mac.cpp
port_scanner/tests/: test_port_scanner.cpp
project-root/: package-lock.json  package.json  webpack.config.js
project-root/main/: main.js  preload.js
project-root/public/: index.html
project-root/src/components/Home/: Home.js
project-root/src/components/PortLister/: PortLister.js
project-root/src/state/: store.js
src/: App.js  ListenPort.cpp  Port.cpp  device_manager.py  main.py  serialTest  test.cpp  ui_main.py
src/Components/: Navbar.js
src/Pages/: ConfigureData.js  Home.js  ManageGraphs.js
src/Satellite/: index.html  renderer.js  style.css
